--- a/practica-css.css
+++ b/practica-css.css
@@ -281,6 +281,8 @@ sticky:es una mezcla entre relative y fixed, ya que mantiene el espacio
 reservado y cuando llega al lugar donde le indicamos la posicion, se manteine
 fijo
 
+nos permite decidir en que momento de la pagina va a estar fijo
+
 cuando posicionamos un elemento adquiere 4 propiedades nuevas
 
 top: el valor le decimo q se mueva hacia abajo- importante
@@ -330,19 +332,163 @@ bottom el valor le decimo q se mueva hacia arriba
     height: 5cm;
     background-color: green;
     font-size: 3em;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
 }
 .position-container__div--five{
-    margin-top: 3em;
-    width: 100vw;
+    width: 100%;
     height: 5cm;
-    background-color: green;
+    background-color: grey;
     font-size: 3em;
     position: sticky;
-    top: 0;
+    top: 20px;
     left: 0;
+    
 }
 
 
+/* Propiedad Display */
+/* 
+Block: ocupan todo el ancho de la pantalla
+
+inline: ocupan lo q contiene, pero no pueden modificar el ancho y alto
+
+inline-block: ocupan lo que contienen, y le podemos modificar el ancho y 
+alto
+
+table: hace que se comporte como una tabla
+
+inline-table: se comporta como tabla en linea
+
+list-item: se comporta como elemento de lista
+
+table-cell: se comporta como una tabla en celda
+osea como cada celda q contiene un dato
+
+table-row: se comporta como una fila de una tabla
+
+table-column: se comporta como una columna de una tabla
+
+las propiedades de tabla ya quedaron en deshuso
+
+flex y grid: revolucionaron la forma de desarrolar y maquetar un sitio
+web, la combinacion de ambas nos ayuda a hacer cualquier cosa
+
+*/
+.display-container{
+    position: relative;
+    display: block;
+    font-size: 25px;
+}
+.display-container div{
+    width: 20vw;
+    height: 4cm;
+    margin: 20px;
+    border: 3px solid yellow;
+    background-color: orange;
+    display: inline-block;
+    font-size: 2em;
+}
+
+/* Overflow */
+
+/* Es la barra del scroll 
+
+tenemos las propiedades
+
+inherit: por defecto, deja q sobresalga
+auto:en caso de q el contenido sobrepase la caja, da la posibilidad de s
+croll
+
+scroll: obligatoriamente pone la barra scroll, se pase o no el contenido
+
+hidden: oculta la barra de scroll
+
+overflow es un shothand,
+
+tenemos overflow-x - horizontal
+y overflow-y - vertical
+
+
+*/
+
+.overflow-container{
+    background-color: chocolate;
+    margin: 2cm auto;
+    width: 80vw;
+    height: 10cm;
+    padding: 1cm;
+    border: .3cm inset yellowgreen;
+    font-size: 1em;
+    
+    overflow-y: scroll;
+}
+.overflow-container__h2{
+    color: navy;
+}
+.overflow-container__p{
+    padding: .8cm .5cm .3cm 1cm;
+    font-size: 1.1em;
+    color: navy;
+    
+}
+
+/* FLOATS */
+
+/*  */
+
+.float-container{
+    background-color: grey;
+    padding: 1cm;
+    display: block;
+    width: 100vw;
+    height: 20cm;
+}
+.float-container div{
+    padding:1cm;
+    width: 50%;
+    float: left;
+}
+.float-container__div--one{
+    background-color: olive;
+}
+.float-container__div--two{
+    background-color: orange;
+}
+.float-container__div--three{
+    background-color: peru;
+}
+.float-container__div--four{
+    background-color: saddlebrown;
+}
+
+/* PSEUDO-ELEMENTOS */
+
+/* es un elemento que no forma parte del dom, 
+pero si podemos ver cambios visuales 
+
+tenemos estos pseudo elementos
+
+::first-line: no funciona en inline, nos modifica la primera linea de 
+texto
+
+::first-letter:
+::placeholder:
+::after:
+::before:
+::selection:
+*/
+
+.pseudo-classes-container{
+    background-color: saddlebrown;
+    margin: 1cm;
+    padding: .5cm;
+}
+.pseudo-classes-container__p::first-line{
+    color: white;
+    font-size: 2em;
+}
+.pseudo-classes-container__p::first-letter{
+    font-size: 2.5em;
+}
